{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 16,
  "lineage": "bd9370ab-96d2-3028-ed35-fdf40fb3837f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865091755851:internet-gateway/igw-07dd7a8392052e3db",
            "id": "igw-07dd7a8392052e3db",
            "owner_id": "865091755851",
            "tags": {
              "Name": "devops-portfolio-igw"
            },
            "tags_all": {
              "Name": "devops-portfolio-igw"
            },
            "vpc_id": "vpc-0111ed2c8069b56da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865091755851:route-table/rtb-09cdc10a19a40c4d6",
            "id": "rtb-09cdc10a19a40c4d6",
            "owner_id": "865091755851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07dd7a8392052e3db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-portfolio-public-rt"
            },
            "tags_all": {
              "Name": "devops-portfolio-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0111ed2c8069b56da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0863f13ec29cfbff3",
            "route_table_id": "rtb-09cdc10a19a40c4d6",
            "subnet_id": "subnet-0ddb947b3ea961cba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865091755851:security-group/sg-042ae24c9cbbe35a6",
            "description": "Allow HTTP traffic to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042ae24c9cbbe35a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "devops-portfolio-sg",
            "name_prefix": "",
            "owner_id": "865091755851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-portfolio-sg"
            },
            "tags_all": {
              "Name": "devops-portfolio-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0111ed2c8069b56da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865091755851:subnet/subnet-0ddb947b3ea961cba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddb947b3ea961cba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865091755851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-portfolio-public-subnet"
            },
            "tags_all": {
              "Name": "devops-portfolio-public-subnet"
            },
            "vpc_id": "vpc-0111ed2c8069b56da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865091755851:vpc/vpc-0111ed2c8069b56da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04800fac152f602d8",
            "default_route_table_id": "rtb-042670d70b18bce6f",
            "default_security_group_id": "sg-0f89f31ef52d5096e",
            "dhcp_options_id": "dopt-0a4834232df3da323",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0111ed2c8069b56da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042670d70b18bce6f",
            "owner_id": "865091755851",
            "tags": {
              "Name": "devops-portfolio-vpc"
            },
            "tags_all": {
              "Name": "devops-portfolio-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}